--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,14 @@
 	"manifest_version": 2,
 	"name": "FT Extension",
 	"description": "",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"browser_action": {
 		"default_icon": "icon.png",
-		"default_popup": "popup.html"
+		"default_popup": ""
 	},
-	"permissions": ["activeTab"]
+	"background": {
+		"scripts": ["background.js"],
+		"persistent": true
+	},
+	"permissions": ["https://*/*", "http://*/*", "tabs"]
 }
